--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
   text-align: center;
-}
+  width: 100%;
+  height: 100%;
+  margin-bottom: 100px;
+  display: grid;
+  gap: 100px;
+  column-gap: 2px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
+  justify-items: center;
+  align-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (min-width: 1727px){
+  .App{
+    grid-template-columns: repeat(3, 1fr);
+    gap: 100px;
+    column-gap: 2px;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (min-width: 1136px) and (max-width: 1726px){
+  .App{
+    grid-template-columns: repeat(2, 1fr);
+    gap: 100px;
+    column-gap: 2px;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+html{
+  background-color: orangered;
 }
